# YOLO-SAM-MODEL

./: README.md  pyproject.toml
notebooks/: training_YOLO.ipynb
src/data/: create_clean_dataset.py
src/inference/: yolo_detect_circles.py  yolo_sam_detect.py
