[project]
name = "eye-ai-model-yolo-sam"
version = "0.1.0"
description = "YOLO + SAM glaucoma pipeline in the DerivaML template"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
  "deriva-ml>=0.9.0",
  "deriva-globus-auth-utils",
  "ultralytics>=8.0.0",
  "opencv-python",
  "numpy>=1.24",
  "matplotlib"
]
